Fix button alignment on search results form

--- a/css/style.css
+++ b/css/style.css
@@ -6383,7 +6383,6 @@ body > nav > div.navbar-header > button {
   margin-right: 20px; }
 
 #bs-primary-navbar-collapse-1 .input-group {
-  background: #981e32;
   width: 100%;
   padding-left: 25px; }
 
@@ -6764,7 +6763,8 @@ h2.hero-title {
 
 #edit-basic > div > div.input-group > span > button {
   margin-top: 0;
-  padding: 7px 11px 7px 11px; }
+  padding: 6px 10px 6px 10px;
+  border-radius: 0; }
 
 #edit-keys {
   box-shadow: none; }
